@@ -22,6 +22,9 @@ Avro 1.6.2 (unreleased)
     AVRO-965. Java: Enhance IDL to support properties for protocols
     and messages. (George Fletcher via cutting)
 
+    AVRO-976. Java: Extend NettyServer to permit specification of an
+    ExecutionHandler, to handle multiple requests simultaneously.
+
   BUG FIXES
 
     AVRO-962. Java: Fix Maven plugin to support string type override.
